out
In file included from ArrayWavIOTest.cpp:3:0:
FFT.h: In function ‘void FFT(Array<Cmplx>, Array<Cmplx>)’:
FFT.h:18:12: error: ‘const struct Array<Cmplx>’ has no member named ‘a’
    FFT_(xs.a, inf2(xs.len), 1, ys.a);
            ^
FFT.h:18:35: error: ‘struct Array<Cmplx>’ has no member named ‘a’
    FFT_(xs.a, inf2(xs.len), 1, ys.a);
                                   ^
FFT.h: In function ‘void IFFT(Array<Cmplx>, Array<Cmplx>)’:
FFT.h:21:13: error: ‘const struct Array<Cmplx>’ has no member named ‘a’
    IFFT_(ys.a, inf2(ys.len), 1, xs.a);
             ^
FFT.h:21:36: error: ‘struct Array<Cmplx>’ has no member named ‘a’
    IFFT_(ys.a, inf2(ys.len), 1, xs.a);
                                    ^
FFT.h:22:25: error: ‘len’ was not declared in this scope
    const float norm=1.0/len;
                         ^
FFT.h:23:26: error: ‘struct Array<Cmplx>’ has no member named ‘a’
    Cmplx* const xsa = xs.a;
                          ^
In file included from ArrayWavIOTest.cpp:4:0:
SigProc.h: At global scope:
SigProc.h:20:85: error: template argument 1 is invalid
 void convolve(const std::vector<std::pair<const float*, float> ins, int len, float* out);
                                                                                     ^
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:21: error: invalid use of template-name ‘std::vector’ without an argument list
 void convolve(const std::vector<std::pair<const float*, float> ins, int len, float* out);
                     ^
SigProc.h:20:26: error: ISO C++ forbids declaration of ‘parameter’ with no type [-fpermissive]
 void convolve(const std::vector<std::pair<const float*, float> ins, int len, float* out);
                          ^
SigProc.h:20:32: error: expected ‘,’ or ‘...’ before ‘<’ token
 void convolve(const std::vector<std::pair<const float*, float> ins, int len, float* out);
                                ^
ArrayWavIOTest.cpp: In function ‘float frequency_of(const char*, float)’:
ArrayWavIOTest.cpp:12:38: error: uninitialized const ‘ca’ [-fpermissive]
    Array<Cmplx> c(len); Cmplx* const ca;
                                      ^
ArrayWavIOTest.cpp:13:24: error: ‘wav_read’ was not declared in this scope
    wav_read(filename, c);
                        ^
ArrayWavIOTest.cpp:14:27: error: ‘find_frequency’ was not declared in this scope
    return find_frequency(c);
                           ^
ArrayWavIOTest.cpp: In function ‘void copy(const char*, const char*, float)’:
ArrayWavIOTest.cpp:21:28: error: ‘wav_read’ was not declared in this scope
    filename_in = wav_read(c);
                            ^
ArrayWavIOTest.cpp:23:14: error: no match for ‘operator[]’ (operand types are ‘Array<Cmplx>’ and ‘int’)
       print(c[i]);
              ^
ArrayWavIOTest.cpp:30:36: error: ‘wav_write’ was not declared in this scope
    wav_write(filename_out, c2, len2);
                                    ^
In file included from SigProc.h:5:0,
                 from SigProcFreq.cpp:1:
FFT.h:17:16: error: ‘Array’ does not name a type
 void FFT(const Array<Cmplx> xs, Array<Cmplx> ys) {
                ^
FFT.h:17:16: error: ISO C++ forbids declaration of ‘parameter’ with no type [-fpermissive]
FFT.h:17:21: error: expected ‘,’ or ‘...’ before ‘<’ token
 void FFT(const Array<Cmplx> xs, Array<Cmplx> ys) {
                     ^
FFT.h: In function ‘void FFT(int)’:
FFT.h:18:9: error: ‘xs’ was not declared in this scope
    FFT_(xs.a, inf2(xs.len), 1, ys.a);
         ^
FFT.h:18:32: error: ‘ys’ was not declared in this scope
    FFT_(xs.a, inf2(xs.len), 1, ys.a);
                                ^
FFT.h: At global scope:
FFT.h:20:17: error: ‘Array’ does not name a type
 void IFFT(const Array<Cmplx> ys, Array<Cmplx> xs) {
                 ^
FFT.h:20:17: error: ISO C++ forbids declaration of ‘parameter’ with no type [-fpermissive]
FFT.h:20:22: error: expected ‘,’ or ‘...’ before ‘<’ token
 void IFFT(const Array<Cmplx> ys, Array<Cmplx> xs) {
                      ^
FFT.h: In function ‘void IFFT(int)’:
FFT.h:21:10: error: ‘ys’ was not declared in this scope
    IFFT_(ys.a, inf2(ys.len), 1, xs.a);
          ^
FFT.h:21:33: error: ‘xs’ was not declared in this scope
    IFFT_(ys.a, inf2(ys.len), 1, xs.a);
                                 ^
FFT.h:22:25: error: ‘len’ was not declared in this scope
    const float norm=1.0/len;
                         ^
In file included from SigProcFreq.cpp:1:0:
SigProc.h: At global scope:
SigProc.h:20:85: error: template argument 1 is invalid
 void convolve(const std::vector<std::pair<const float*, float> ins, int len, float* out);
                                                                                     ^
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:85: error: template argument 1 is invalid
SigProc.h:20:85: error: template argument 2 is invalid
SigProc.h:20:21: error: invalid use of template-name ‘std::vector’ without an argument list
 void convolve(const std::vector<std::pair<const float*, float> ins, int len, float* out);
                     ^
SigProc.h:20:26: error: ISO C++ forbids declaration of ‘parameter’ with no type [-fpermissive]
 void convolve(const std::vector<std::pair<const float*, float> ins, int len, float* out);
                          ^
SigProc.h:20:32: error: expected ‘,’ or ‘...’ before ‘<’ token
 void convolve(const std::vector<std::pair<const float*, float> ins, int len, float* out);
                                ^
SigProcFreq.cpp: In function ‘float frequency_of(Array<Cmplx>)’:
SigProcFreq.cpp:4:19: error: ‘len’ was not declared in this scope
    Array<Cmplx> f(len); Cmplx* const fa;
                   ^
SigProcFreq.cpp:4:38: error: uninitialized const ‘fa’ [-fpermissive]
    Array<Cmplx> f(len); Cmplx* const fa;
                                      ^
SigProcFreq.cpp:5:12: error: cannot convert ‘const Array<Cmplx>’ to ‘int’ for argument ‘1’ to ‘void FFT(int)’
    FFT(xs,f);
            ^
SigProcFreq.cpp:9:19: error: ‘len2’ was not declared in this scope
    for(int k=1; k<len2-1; ++k) {
                   ^
SigProcFreq.cpp:10:17: error: no match for ‘operator[]’ (operand types are ‘Array<Cmplx>’ and ‘int’)
       float m2=f[k].mag2();
                 ^
SigProcFreq.cpp: In function ‘float frequency_of(const char*, float)’:
SigProcFreq.cpp:23:38: error: uninitialized const ‘ca’ [-fpermissive]
    Array<Cmplx> c(len); Cmplx* const ca;
                                      ^
SigProcFreq.cpp:24:24: error: ‘wav_read’ was not declared in this scope
    wav_read(filename, c);
                        ^
SigProcFreq.cpp:26:38: error: uninitialized const ‘fa’ [-fpermissive]
    Array<Cmplx> f(len); Cmplx* const fa;
                                      ^
SigProcFreq.cpp:27:11: error: cannot convert ‘Array<Cmplx>’ to ‘int’ for argument ‘1’ to ‘void FFT(int)’
    FFT(c,f);
           ^
SigProcFreq.cpp:31:19: error: ‘len2’ was not declared in this scope
    for(int k=1; k<len2-1; ++k) {
                   ^
SigProcFreq.cpp:32:17: error: no match for ‘operator[]’ (operand types are ‘Array<Cmplx>’ and ‘int’)
       float m2=f[k].mag2();
                 ^
